hphp/test/zend/good/Zend/tests/traits/bug60165a.php.expectf

Fatal error: Unknown trait '' in %s/bug60165a.php on line 7
